chain/indexer/src/handlers/snapshots/blokli_chain_indexer__handlers__service_registry__tests__update_burn_changed_event.snap
---
source: chain/indexer/src/handlers/service_registry.rs
expression: type_update(events)
---
kind: UpdateBurnChanged
service_type: "gvpn:exit"
config:
  service_type: "gvpn:exit"
  owner: "0x3333333333333333333333333333333333333333"
  requirement: ~
  registration_burn: 0 wxHOPR
  update_burn: 0.25 wxHOPR
registry_config: ~
